[gd_scene load_steps=5 format=3 uid="uid://dckdkib2o748i"]

[ext_resource type="Script" uid="uid://cet2qphhr83wv" path="res://scripts/wire.gd" id="1_dwteb"]
[ext_resource type="Texture2D" uid="uid://crtjnb16e641u" path="res://assets/colored.png" id="2_dwteb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwteb"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h77cu"]
size = Vector2(2, 2)

[node name="TWire" type="StaticBody2D"]
script = ExtResource("1_dwteb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_dwteb")
region_enabled = true
region_rect = Rect2(629, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dwteb")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)

[node name="PowerCheck" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerCheck"]
shape = SubResource("RectangleShape2D_h77cu")

[node name="PowerCheck2" type="Area2D" parent="."]
position = Vector2(8, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerCheck2"]
shape = SubResource("RectangleShape2D_h77cu")

[node name="PowerCheck3" type="Area2D" parent="."]
position = Vector2(0, 8)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerCheck3"]
shape = SubResource("RectangleShape2D_h77cu")

[node name="PowerCheck4" type="Area2D" parent="."]
position = Vector2(-8, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerCheck4"]
shape = SubResource("RectangleShape2D_h77cu")
disabled = true
